# SimpsonsQuotes

./: README.md  main.py  pyproject.toml  wrapper.py
src/: main.py  wrapper.py
