[project]
name = "simpsonsquotes"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Flet developer", email = "you@example.com" }]
dependencies = ["flet>=0.80.1", "requests"]

[dependency-groups]
dev = ["flet[all]>=0.80.1"]

[tool.flet]
org = "de.cmg"
product = "Simpsons Quotes"
company = "Creative Media Group"
copyright = "Copyright (C) 2026 by Creative Media Group"

[tool.flet.app]
path = "src"
